2000-07-28  Larry Jones  <larry.jones@sdrc.com>

	* server.c (server_noop): Avoid do_cvs_command() overhead.
	(requests): Make noop RQ_ROOTLESS.

2000-07-27  Noel Cragg  <noel@red-bean.com>

	* root.c (parse_cvsroot): change fork method to behave like other
	remote methods -- let the server check that the repository
	directory is an absolute pathname.

2000-07-27  Larry Jones  <larry.jones@sdrc.com>

	* lock.c (set_lock): Include actual lock directory in error message.
	* sanity.sh (multiroot3-10): Change to match.

	* sanity.sh (client-3): Allow for a potential "broken pipe".

2000-07-26  Larry Jones  <larry.jones@sdrc.com>

	* commit.c (commit_filesdoneproc): Flush stdout before running script.
	* modules.c (do_module): Ditto.
	* update.c (update_dirleave_proc): Ditto.
	* server.c (do_cvs_command): Give input from the protocol pipe
	precedence over input from stdout/stderr.  There's no particularly
	good justification for this other than helping to avoid out-of-order
	messages in sanity.sh.

	* admin.c (admin_usage): Add the supported options.

	* sanity.sh (info): Try to avoid out-of-order messages.

	* sanity.sh (info): Fix problems when running twice in a row.

2000-07-17  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5-7, cvsadm-1e, emptydir-2): Allow for a nil
	commit (can happen if the test is run twice in a row).

2000-07-19  Pavel Roskin  <proski@gnu.org>
	and Larry Jones  <larry.jones@sdrc.com>

	* mkmodules.c (config_contents): Add a commented out example for
	LockDir. Don't suggest PreservePermissions unless it's enabled.

2000-07-17  Larry Jones  <larry.jones@sdrc.com>

	* login.c (get_cvs_password): Handle malformed ~/.cvspass more
	gracefully.

2000-07-12  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (modules5): New tests for module programs.

2000-07-11  Larry Jones  <larry.jones@sdrc.com>

	* filesubr.c (copy_file, xcmp): Handle systems (like Plan 9) that
	don't support mknod() and/or st_rdev.
	* import.c (add_rcs_file): Ditto.