@@ -1,3 +1,8 @@
+2000-08-01  Larry Jones  <larry.jones@sdrc.com>
+
+	* loginc.c (login): If available, use getpassphrase instead of
+	getpass to support long passwords on Solaris.
+
 2000-07-28  Larry Jones  <larry.jones@sdrc.com>
 
 	* server.c (server_noop): Avoid do_cvs_command() overhead.
